--- a/app/views/figures/new.erb
+++ b/app/views/figures/new.erb
@@ -17,5 +17,5 @@
     <%= erb :'landmarks/_landmark_input', locals: {landmark: landmark, figure: @figure} %>
   <% end %>
   <input type="text" name="landmark[name]"/>
-  <input type="submit" value="Create Figure"/>
+  <input type="submit" value="Create New Figure"/>
 </form>
