--- a/app/views/titles/_title_input.erb
+++ b/app/views/titles/_title_input.erb
@@ -1,2 +1,2 @@
-<input id="title-<%=title.id%>" type="checkbox" value="<%=title.id%>" name="figure[title_ids][]"
+<input id="title_<%=title.id%>" type="checkbox" value="<%=title.id%>" name="figure[title_ids][]"
 <%= "checked" if figure.titles.include? title %>><%=title.name%></input>
